--- a/game.html
+++ b/game.html
@@ -5,13 +5,39 @@
   <script>
     let canvas;
     let canvasContext;
+    let ballX = 50;
+    let ballSpeedX = 15;
 
     window.onload = function() {
-      console.log("Hello World!");
       canvas = document.getElementById("gameCanvas");
       canvasContext = canvas.getContext("2d");
+
+      let framesPerSecond = 30;
+      setInterval(function() {
+        moveEverything();
+        drawEverything();
+      }, 1000 / framesPerSecond);
+    };
+
+    function moveEverything() {
+      ballX = ballX + ballSpeedX;
+      if (ballX < 0) {
+        ballSpeedX = -ballSpeedX;
+      }
+      if (ballX > canvas.width) {
+        ballSpeedX = -ballSpeedX;
+      }
+    }
+
+    function drawEverything() {
       canvasContext.fillStyle = "black";
       canvasContext.fillRect(0, 0, canvas.width, canvas.height);
-    };
+
+      canvasContext.fillStyle = "white";
+      canvasContext.fillRect(10, 210, 10, 100);
+
+      canvasContext.fillStyle = "green";
+      canvasContext.fillRect(ballX, 100, 10, 10);
+    }
   </script>
 </html>
