added right padd AI movement

--- a/game.html
+++ b/game.html
@@ -39,7 +39,7 @@
 
       canvas.addEventListener("mousemove", function(evt) {
         let mousePos = calculateMousePos(evt);
-        paddle2Y = mousePos.y - PADDLE_HEIGHT / 2;
+        paddle1Y = mousePos.y - PADDLE_HEIGHT / 2;
       });
     };
 
@@ -49,9 +49,19 @@
       ballY = canvas.height / 2;
     }
 
+    function computerMovement() {
+      if (paddle2Y < ballY) {
+        paddle2Y += 6;
+      } else {
+        paddle2Y -= 6;
+      }
+    }
+
     function moveEverything() {
-      ballX = ballX + ballSpeedX;
-      ballY = ballY + ballSpeedY;
+      computerMovement();
+
+      ballX += ballSpeedX;
+      ballY += ballSpeedY;
       if (ballX < 0) {
         //ballSpeedX = -ballSpeedX;
         if (ballY > paddle1Y && ballY < paddle1Y + PADDLE_HEIGHT) {
