--- a/game.html
+++ b/game.html
@@ -1,5 +1,4 @@
 <html>
-  some text here
   <canvas id="gameCanvas" width="800" height="600"></canvas>
 
   <script>
@@ -9,6 +8,12 @@
     let ballY = 50;
     let ballSpeedX = 10;
     let ballSpeedY = 4;
+
+    let player1Score = 0;
+    let player2Score = 0;
+    const WINNING_SCORE = 3;
+
+    let showingWinScreen = false;
 
     let paddle1Y = 250;
     let paddle2Y = 250;
@@ -26,6 +31,14 @@
       };
     }
 
+    function handleMouseClick(evt) {
+      if (showingWinScreen) {
+        player2Score = 0;
+        player1Score = 0;
+        showingWinScreen = false;
+      }
+    }
+
     window.onload = function() {
       canvas = document.getElementById("gameCanvas");
       canvasContext = canvas.getContext("2d");
@@ -37,6 +50,8 @@
         drawEverything();
       }, 1000 / framesPerSecond);
 
+      canvas.addEventListener("mousedown", handleMouseClick);
+
       canvas.addEventListener("mousemove", function(evt) {
         let mousePos = calculateMousePos(evt);
         paddle1Y = mousePos.y - PADDLE_HEIGHT / 2;
@@ -44,37 +59,50 @@
     };
 
     function ballReset() {
+      if (player1Score >= WINNING_SCORE || player2Score >= WINNING_SCORE) {
+        showingWinScreen = true;
+      }
       ballSpeedX = -ballSpeedX;
       ballX = canvas.width / 2;
       ballY = canvas.height / 2;
     }
 
     function computerMovement() {
-      if (paddle2Y < ballY) {
+      let paddle2YCenter = paddle2Y + PADDLE_HEIGHT / 2;
+      if (paddle2YCenter < ballY - 35) {
         paddle2Y += 6;
-      } else {
+      } else if (paddle2YCenter > ballY + 35) {
         paddle2Y -= 6;
       }
     }
 
     function moveEverything() {
+      if (showingWinScreen) {
+        return;
+      }
       computerMovement();
 
       ballX += ballSpeedX;
       ballY += ballSpeedY;
       if (ballX < 0) {
-        //ballSpeedX = -ballSpeedX;
         if (ballY > paddle1Y && ballY < paddle1Y + PADDLE_HEIGHT) {
           ballSpeedX = -ballSpeedX;
+
+          let deltaY = ballY - (paddle1Y + PADDLE_HEIGHT / 2);
+          ballSpeedY = deltaY * 0.35;
         } else {
+          player2Score++;
           ballReset();
         }
       }
       if (ballX > canvas.width) {
-        //ballSpeedX = -ballSpeedX;
         if (ballY > paddle2Y && ballY < paddle2Y + PADDLE_HEIGHT) {
           ballSpeedX = -ballSpeedX;
+
+          let deltaY = ballY - (paddle2Y + PADDLE_HEIGHT / 2);
+          ballSpeedY = deltaY * 0.35;
         } else {
+          player1Score++;
           ballReset();
         }
       }
@@ -89,6 +117,18 @@
     function drawEverything() {
       // next line blanks out the screen with black
       colorRect(0, 0, canvas.width, canvas.height, "black");
+
+      if (showingWinScreen) {
+        canvasContext.fillStyle = "white";
+        canvasContext.fillText("Click To Continue", 350, 500);
+        if (player1Score >= WINNING_SCORE) {
+          canvasContext.fillText("Left Player Won!", 350, 200);
+        } else if (player2Score >= WINNING_SCORE) {
+          canvasContext.fillText("Right Player Won!", 350, 200);
+        }
+
+        return;
+      }
 
       // left player paddle
       colorRect(10, paddle1Y, PADDLE_THICKNESS, PADDLE_HEIGHT, "white");
@@ -105,6 +145,9 @@
       // draws the ball
       //colorRect(ballX, 100, 10, 10, "green");
       colorCircle(ballX, ballY, 10, "green");
+
+      canvasContext.fillText(player1Score, 100, 100);
+      canvasContext.fillText(player2Score, canvas.width - 100, 100);
     }
 
     function colorCircle(centerX, centerY, radius, color) {
